//
// DISCLAIMER
//
// Copyright 2026 ArangoDB GmbH, Cologne, Germany
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// Copyright holder is ArangoDB GmbH, Cologne, Germany
//

syntax = "proto3";

package types;

import "pkg/sidecar/services/authorization/types/effect.proto";

option go_package = "github.com/arangodb/kube-arangodb/pkg/sidecar/services/authorization/types";

// Policy Object Definition
message Policy {
  // List of the statements
  repeated PolicyStatement statements = 1;
}

// PolicyStatement Object Definition
message PolicyStatement {
  // Effect of the statement
  Effect effect = 1;

  // List of the resources
  repeated string resources = 2;

  // List of the actions
  repeated string actions = 3;
}